[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Useful cli tools"
edition = "2021"
license = "Apache-2.0"
name = "ddt"
repository = "https://github.com/dudykr/ddt.git"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.0"
anyhow = "1.0.0"
async-trait = "0.1.73"
auto_impl = "1.1.0"
cargo_metadata = "0.15.2"
clap = { version = "4.0.29", features = ["derive"] }
crates-index = "2.1.1"
futures = "0.3.25"
semver = { version = "1.0.18", features = ["serde"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
string_cache = "0.8.7"
tokio = { version = "1.22.0", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "process",
    "fs",
    "sync",
] }
