[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Useful cli tools"
edition = "2021"
license = "Apache-2.0"
name = "ddt"
repository = "https://github.com/dudykr/ddt.git"
version = "0.2.9"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.0"
anyhow = "1.0.0"
async-recursion = "1.0.5"
async-trait = "0.1.73"
auto_impl = "1.1.0"
cargo_metadata = "0.15.2"
chrono = "0.4.31"
clap = { version = "4.0.29", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["completion"] }
dudy-malloc = "0.1.0"
futures = "0.3.25"
hstr = { version = "0.2.5", features = ["serde"] }
inferno = "0.11.17"
is_executable = "1.0.1"
once_cell = "1.18.0"
rayon = "1.7.0"
regex = "1.9.5"
reqwest = "0.11.22"
semver = { version = "1.0.18", features = ["serde"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
signal-hook = "0.3.17"
tempfile = "3.8.0"
tokio = { version = "1.22.0", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "process",
    "fs",
    "sync",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt"] }

[profile.release]
lto = "off"
# Strip debug symbols
# strip = "symbols"

[profile.bench]
debug = true

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
